--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
     <script src="https://kit.fontawesome.com/b6207faf77.js" crossorigin="anonymous"></script>
-<!--    <link rel="stylesheet" href="home.css">-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,700&family=Rubik+Scribble&display=swap" rel="stylesheet">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
+
 </head>
 <body>
 <nav>
     <div class="logo">
-        <a class="navbar-brand" href="#"><img src="VVIT_logo.svg" alt="logo" class="logo w-25"/></a>
+        <a class="navbar-brand" href="https://www.vvitguntur.com/#"><img src="{% static 'images/VVIT_logo.svg' %}" alt="logo" class="logo w-25"/></a>
     </div>
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
@@ -37,67 +37,20 @@
 <div class="margin_container">
         <div class="d-flex flex-row justify-content-center">
             <div class="grid-container d-none d-sm-none d-md-block d-lg-block d-xl-block">
-   <img src="File%20searching-pana%20(1).svg" alt="Reload" class="library"/>
-        </div>
+                <img src="{% static 'images/Filesearching-pana(1).svg' %}" alt="Reload" class="library"/>
+            </div>
         <div class="grid-container  heading-text">
-            <img src="heading.svg" alt="Reload" class=" heading-text d-none d-sm-none d-md-block d-lg-block d-xl-block"/>
-            <img src="heading.svg" alt="Reload" class="heading-text1 d-block d-sm-block d-md-none d-lg-none d-xl-none "/>
+            <img src="{% static 'images/heading.svg' %}" alt="Reload" class=" heading-text d-none d-sm-none d-md-block d-lg-block d-xl-block"/>
+            <img src="{% static 'images/heading.svg' %}" alt="Reload" class="heading-text1 d-block d-sm-block d-md-none d-lg-none d-xl-none "/>
 
         </div>
         <div class="grid-container">
-            <img src="File%20searching-rafiki.svg" alt="Reload" class="book-stu d-none d-sm-none d-md-none d-lg-block d-xl-block"/>
+            <img src="{% static 'images/Filesearching-rafiki.svg' %}" alt="Reload" class="book-stu d-none d-sm-none d-md-none d-lg-block d-xl-block"/>
     </div>
 </div>
     </div>
 </div>
 </div>
-
-
-<!--carousel-->
-
-
-<!--carousel start-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <script>
     function navSlide() {
         const burger = document.querySelector(".burger");
@@ -125,7 +78,5 @@
     navSlide();
 
 </script>
-
-
 </body>
 </html>
