--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -7,7 +7,8 @@
     <link rel="icon" type="image/x-icon" href="VVIT_logo.svg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="Login.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
 <body>
 
@@ -40,7 +41,7 @@
     <div class="row container_margin">
         <div class="d-flex flex-row justify-content-center ">
             <div class="d-none d-sm-none d-md-block d-lg-block d-xl-block order-2">
-                <img src="Login-pan.svg" alt="reload" class=" pt-3 user_img">
+                <img src="{% static 'images/Login-pan.svg' %}" alt="reload" class=" pt-3 user_img">
             </div>
             <div class="d-none d-sm-none d-md-none d-xl-block d-lg-block col-md-6 col-xl-6 col-xl-6 pt-3 order-1">
                 <div class="card ml-5 shadow-lg w-75 h-auto m-3">
