--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -21,7 +21,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="{% url 'home' %}">Home</a>
+
+<!--                    <a class="nav-link" href="#">Home</a>-->
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Login</a>
@@ -45,24 +47,25 @@
             </div>
             <div class="d-none d-sm-none d-md-none d-xl-block d-lg-block col-md-6 col-xl-6 col-xl-6 pt-3 order-1">
                 <div class="card ml-5 shadow-lg w-75 h-auto m-3">
-                    <h4 class="pt-3">Forgot Password</h4>
-                    <p>Please Enter Valid Email address</p>
+                    <h4 class="pt-3">Login</h4>
+                    <p>Please Enter Valid User Name</p>
 
-                    <form>
-                        <div class="texts d-flex flex-column justify-content-center"  >
-                            <div class="form-floating mb-3 ">
-                                <input type="email" class="form-control input_class" id="Input1" placeholder="name@vvit.net">
-                                <label for="Input1">Email address</label>
+                    <form method="post" action="{% url 'login_user' %}">
+                        {% csrf_token %}
+                        <div class="texts d-flex flex-column justify-content-center">
+                            <div class="form-floating mb-3">
+                                <input type="text" name="username" class="form-control input_class" id="Input1" placeholder="name@vvit.net">
+                                <label for="Input1">User Name</label>
                             </div>
                             <div class="form-floating">
-                                <input type="password" class="form-control input_class" id="Password1" placeholder="Password">
+                                <input type="password" name="password" class="form-control input_class" id="Password1" placeholder="Password">
                                 <label for="Password1">Password</label>
                             </div>
 
                             <button type="submit" class="btn mt-3" data-mdb-ripple-init> Login</button>
                         </div>
-
                     </form>
+
 
 
                 </div>
@@ -77,7 +80,7 @@
                     <img src="Login-pan.svg" alt="reload" class="image_card mt-2 ">
                     <div class="texts d-flex flex-column justify-content-center" >
                         <h4 class="pt-3">Login</h4>
-                        <p>Please Enter Valid Email address<br> and password</p>
+                        <p>Please Enter Valid User name<br> and password</p>
 
                         <form>
                             <div class="texts d-flex flex-column justify-content-center"  >
