--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -42,10 +42,10 @@
 <div class="container ">
     <div class="row container_margin">
         <div class="d-flex flex-row justify-content-center ">
-            <div class="d-none d-sm-none d-md-block d-lg-block d-xl-block order-2">
+            <div class="d-none d-sm-none d-md-block d-lg-block d-xl-block order-1">
                 <img src="{% static 'images/Login-pan.svg' %}" alt="reload" class=" pt-3 user_img">
             </div>
-            <div class="d-none d-sm-none d-md-none d-xl-block d-lg-block col-md-6 col-xl-6 col-xl-6 pt-3 order-1">
+            <div class="d-none d-sm-none d-md-none d-xl-block d-lg-block col-md-6 col-xl-6 col-xl-6 pt-3 order-2">
                 <div class="card ml-5 shadow-lg w-75 h-auto m-3">
                     <h4 class="pt-3">Login</h4>
                     <p>Please Enter Valid User Name</p>
@@ -74,10 +74,10 @@
 
         <!---another form-->
         <div class="row mt-3 ">
-            <div class="d-block d-sm-block d-md-none   col-10 col-md-10 col-sm-10 ">
+            <div class="d-block d-sm-block d-md-block   col-10 col-md-10 col-sm-10 ">
                 <div class="card  pl-5 shadow-lg h-auto ">
 
-                    <img src="Login-pan.svg" alt="reload" class="image_card mt-2 ">
+                    <!--<img src="Login-pan.svg" alt="reload" class="image_card mt-2"> -->
                     <div class="texts d-flex flex-column justify-content-center" >
                         <h4 class="pt-3">Login</h4>
                         <p>Please Enter Valid User name<br> and password</p>
