--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -73,38 +73,38 @@
         </div>
 
         <!---another form-->
-        <div class="row mt-3 ">
-            <div class="d-block d-sm-block d-md-block   col-10 col-md-10 col-sm-10 ">
-                <div class="card  pl-5 shadow-lg h-auto ">
+<!--        <div class="row mt-3 ">-->
+<!--            <div class="d-block d-sm-block d-md-block   col-10 col-md-10 col-sm-10 ">-->
+<!--                <div class="card  pl-5 shadow-lg h-auto ">-->
 
-                    <!--<img src="Login-pan.svg" alt="reload" class="image_card mt-2"> -->
-                    <div class="texts d-flex flex-column justify-content-center" >
-                        <h4 class="pt-3">Login</h4>
-                        <p>Please Enter Valid User name<br> and password</p>
+<!--                    &lt;!&ndash;<img src="Login-pan.svg" alt="reload" class="image_card mt-2"> &ndash;&gt;-->
+<!--                    <div class="texts d-flex flex-column justify-content-center" >-->
+<!--                        <h4 class="pt-3">Login</h4>-->
+<!--                        <p>Please Enter Valid User name<br> and password</p>-->
 
-                        <form>
-                            <div class="texts d-flex flex-column justify-content-center"  >
-                                <div class="form-floating mb-3 ">
-                                    <input type="email" class="form-control input_class" id="Input" placeholder="name@vvit.net">
-                                    <label for="Input">Email address</label>
-                                </div>
-                                <div class="form-floating">
-                                    <input type="password" class="form-control input_class" id="Password" placeholder="Password">
-                                    <label for="Password">Password</label>
-                                </div>
-                            </div>
+<!--                        <form>-->
+<!--                            <div class="texts d-flex flex-column justify-content-center"  >-->
+<!--                                <div class="form-floating mb-3 ">-->
+<!--                                    <input type="email" class="form-control input_class" id="Input" placeholder="name@vvit.net">-->
+<!--                                    <label for="Input">Email address</label>-->
+<!--                                </div>-->
+<!--                                <div class="form-floating">-->
+<!--                                    <input type="password" class="form-control input_class" id="Password" placeholder="Password">-->
+<!--                                    <label for="Password">Password</label>-->
+<!--                                </div>-->
+<!--                            </div>-->
 
-                        </form>
+<!--                        </form>-->
 
-                        <button  type="submit" class="btn btn-primary mt-2"> Login</button>
+<!--                        <button  type="submit" class="btn btn-primary mt-2"> Login</button>-->
 
 
 
-                    </div>
-                </div>
+<!--                    </div>-->
+<!--                </div>-->
 
-            </div>
-        </div>
+<!--            </div>-->
+<!--        </div>-->
     </div>
 
 </div>
