--- a/signup/templates/SignUp.html
+++ b/signup/templates/SignUp.html
@@ -6,9 +6,8 @@
     <link rel="icon" type="image/x-icon" href="VVIT_logo.svg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="Signup.css">
-
-
+     {% load static %}
+    <link rel="stylesheet" href="{% static 'css/Signup.css' %}">
 
 </head>
 <body>
@@ -46,7 +45,7 @@
                 <!--form tag created-->
                 <div class="d-flex flex-column justify-content-center p-3">
                 <h1 class="text-center text-3xl ">SignUp</h1>
-                <form>
+                <form >
                     <!--Name-->
                     <div class="form-floating mb-3 m-2 w-40">
                         <input type="text" class="form-control input_class" id="floatingInput1" placeholder="name">
@@ -100,7 +99,7 @@
 
        <div class="d-none d-sm-none d-md-block d-xl-block d-lg-block col-5 col-lg-5">
             <div class="card1">
-                <img src="SignUp.svg" alt="Reload" class="library"/>
+                <img src="{% static 'images/SignUp.svg' %}" alt="Reload" class="library"/>
             </div>
         </div>
         </div>
