connections added to signup

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -24,7 +24,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="{% url 'login_user' %}">Login</a></li>
 <!--        <li><a href="user_profile.html">Login</a></li>-->
-        <li><a href="">SignUp</a></li>
+        <li><a href="{% url 'signup' %}">SignUp</a></li>
         <li><a href="">About US</a></li>
     </ul>
     <div class="burger">
