--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="#">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">SignUp</a>
+                    <a class="nav-link" href="{% url 'signup' %}">SignUp</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">FAQ</a>
