--- a/signup/templates/SignUp.html
+++ b/signup/templates/SignUp.html
@@ -21,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link back1" href="#">Home</a>
+                    <a class="nav-link back1" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link back1" href="#">Login</a>
+                    <a class="nav-link back1" href="{% url 'login_user' %}">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link back1" href="#">SignUp</a>
