modified login app

--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -50,7 +50,7 @@
                     <h4 class="pt-3">Login</h4>
                     <p>Please Enter Valid User Name</p>
 
-                    <form method="post" action="{% url 'login_user' %}">
+                    <form method="post" action="{% url 'login' %}">
                         {% csrf_token %}
                         <div class="texts d-flex flex-column justify-content-center">
                             <div class="form-floating mb-3">
