modified signup app

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -22,7 +22,7 @@
     </div>
     <ul class="nav-links">
         <li><a href="#">Home</a></li>
-        <li><a href="{% url 'login_user' %}">Login</a></li>
+        <li><a href="{% url 'login' %}">Login</a></li>
 <!--        <li><a href="user_profile.html">Login</a></li>-->
         <li><a href="{% url 'signup' %}">SignUp</a></li>
         <li><a href="">About US</a></li>
