--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -60,7 +60,10 @@
                                 <input type="password" name="password" class="form-control input_class" id="Password1" placeholder="Password">
                                 <label for="Password1">Password</label>
                             </div>
-
+                            <div class="mt-1">
+                                <a href="ForgotPassword.html" style="color: blue;">Forgot Password?</a>
+                                <p>If you are new <a href="{% url 'signup' %}" style="color: blue;">Sign Up</a></p>
+                            </div>
                             <button type="submit" class="btn mt-3" data-mdb-ripple-init> Login</button>
                         </div>
                     </form>
