--- a/forgotpassword/templates/forgotpassword.html
+++ b/forgotpassword/templates/forgotpassword.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Navbar</title>
-    <link rel="icon" type="image/x-icon" href="VVIT_logo.svg">
+    <link rel="icon" type="image/x-icon" href="{% static 'images/VVIT_logo.svg' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="ForgotPassword.css">
+    <link rel="stylesheet" href="{% static 'css/forgotpassword.css' %}">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="VVIT_logo.svg" alt="logo" width="50%"> </a>
+        <a class="navbar-brand" href="#"><img src="{% static 'images/VVIT_logo.svg' %}" alt="logo" width="50%"> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,30 +41,53 @@
     <div class="row ">
         <div class="d-flex flex-row justify-content-center ">
             <div class="d-none d-sm-none d-md-none d-lg-block d-xl-block order-2">
-                <img src="Forgot-password.svg" alt="reload" class=" pt-3 user_img">
+                <img src="{% static 'images/Forgot-password.svg' %}" alt="reload" class=" pt-3 user_img">
             </div>
             <div class="d-none d-sm-none d-md-none d-xl-block d-lg-block col-md-6 col-xl-6 col-xl-6 pt-3 order-1">
                 <div class="card ml-5 shadow-lg w-75 h-auto m-3">
                     <h4 class="pt-3">Forgot Password</h4>
-                    <p>Please enter the email address for your account.
+                    <p>Please enter registered email id for your account.
                         <br>A verification code will be sent to you. <br>
                         Once you have received the verification code,<br>
                         you will be able to choose a new password for your account.</p>
-                    <form>
-                        <div class="texts d-flex flex-column justify-content-center"  >
-                            <div class="form-floating mb-2 ">
-                                <input type="email" class="form-control input_class" id="Input1" placeholder="name@vvit.net">
+                    <form method="post" action="{% url 'forgotpassword' %}">
+                        {% csrf_token %}
+                        <div class="texts d-flex flex-column justify-content-center">
+                            <div class="form-floating mb-2">
+                                <input name="email" type="email" class="form-control input_class" id="Input1"
+                                    placeholder="name@vvit.net">
                                 <label for="Input1">Email address</label>
                             </div>
 
-                            <div class="form-floating mb-2 ">
-                                <input type="email" class="form-control input_class" id="Input2" placeholder="OTP">
+                            {% if email_exists %}
+                            <div class="form-floating mb-2">
+                                <input name="otp" type="text" class="form-control input_class" id="Input2" placeholder="OTP">
                                 <label for="Input2">OTP</label>
                             </div>
 
-                            <button type="submit" class="btn mt-3" data-mdb-ripple-init> Login</button>
-                        </div>
+                            {% if otp_verified %}
+                            <div class="form-floating mb-2">
+                                <input name="password1" type="password" class="form-control input_class" id="Input3"
+                                    placeholder="password">
+                                <label for="Input3">Password</label>
+                            </div>
 
+                            <div class="form-floating mb-2">
+                                <input name="password2" type="password" class="form-control input_class" id="Input4"
+                                    placeholder="Confirm Password">
+                                <label for="Input4">Confirm Password</label>
+                            </div>
+
+                            <button type="submit" class="btn mt-3" data-mdb-ripple-init>Update Password</button>
+
+                            {% else %}
+                            <button type="submit" class="btn mt-3" data-mdb-ripple-init>Check OTP</button>
+                            {% endif %}
+
+                            {% else %}
+                            <button type="submit" class="btn mt-3" data-mdb-ripple-init>Check Mail</button>
+                            {% endif %}
+                        </div>
                     </form>
 
 
@@ -90,8 +114,8 @@
                                     <label for="Input">Email address</label>
                                 </div>
                                 <div class="form-floating mb-3 ">
-                                    <input type="email" class="form-control input_class" id="Input3" placeholder="OTP">
-                                    <label for="Input3">OTP</label>
+                                    <input type="email" class="form-control input_class" id="Input5" placeholder="OTP">
+                                    <label for="Input5">OTP</label>
                                 </div>
 
                             </div>
