modified forgotpassword app

--- a/forgotpassword/templates/forgotpassword.html
+++ b/forgotpassword/templates/forgotpassword.html
@@ -50,45 +50,51 @@
                         <br>A verification code will be sent to you. <br>
                         Once you have received the verification code,<br>
                         you will be able to choose a new password for your account.</p>
+
+                    <!-- Add a step variable to control the display of form sections -->
+                    {% with step=step|default:1 %}
+
+                    <!-- ... your existing code ... -->
+
                     <form method="post" action="{% url 'forgotpassword' %}">
                         {% csrf_token %}
-                        <div class="texts d-flex flex-column justify-content-center">
+
+                        {% if step == 1 %}
+                            <!-- Step 1: Email and Send OTP -->
                             <div class="form-floating mb-2">
-                                <input name="email" type="email" class="form-control input_class" id="Input1"
-                                    placeholder="name@vvit.net">
+                                <input name="email" type="email" class="form-control input_class" id="Input1" placeholder="name@vvit.net">
                                 <label for="Input1">Email address</label>
                             </div>
 
-                            {% if email_exists %}
+                            <button type="submit" class="btn mt-3" data-mdb-ripple-init>Send OTP</button>
+                        {% elif step == 2 %}
+                            <!-- Step 2: OTP Verification -->
                             <div class="form-floating mb-2">
                                 <input name="otp" type="text" class="form-control input_class" id="Input2" placeholder="OTP">
                                 <label for="Input2">OTP</label>
                             </div>
 
-                            {% if otp_verified %}
+                            <button type="submit" class="btn mt-3" data-mdb-ripple-init>Check OTP</button>
+                        {% elif step == 3 %}
+                            <!-- Step 3: Change Password -->
                             <div class="form-floating mb-2">
-                                <input name="password1" type="password" class="form-control input_class" id="Input3"
-                                    placeholder="password">
+                                <input name="password1" type="password" class="form-control input_class" id="Input3" placeholder="password">
                                 <label for="Input3">Password</label>
                             </div>
 
                             <div class="form-floating mb-2">
-                                <input name="password2" type="password" class="form-control input_class" id="Input4"
-                                    placeholder="Confirm Password">
+                                <input name="password2" type="password" class="form-control input_class" id="Input4" placeholder="Confirm Password">
                                 <label for="Input4">Confirm Password</label>
                             </div>
 
                             <button type="submit" class="btn mt-3" data-mdb-ripple-init>Update Password</button>
-
-                            {% else %}
-                            <button type="submit" class="btn mt-3" data-mdb-ripple-init>Check OTP</button>
-                            {% endif %}
-
-                            {% else %}
-                            <button type="submit" class="btn mt-3" data-mdb-ripple-init>Check Mail</button>
-                            {% endif %}
-                        </div>
+                        {% endif %}
                     </form>
+
+                    <!-- ... rest of your code ... -->
+
+                    {% endwith %}
+
 
 
                 </div>
@@ -96,41 +102,41 @@
         </div>
 
         <!---another form-->
-        <div class="row mt-3 ">
-            <div class="d-block  d-sm-block d-md-block   d-xl-none d-lg-none col-10 col-md-10 col-sm-10 ">
-                <div class="card  pl-5 shadow-lg h-auto ">
+<!--        <div class="row mt-3 ">-->
+<!--            <div class="d-block  d-sm-block d-md-block   d-xl-none d-lg-none col-10 col-md-10 col-sm-10 ">-->
+<!--                <div class="card  pl-5 shadow-lg h-auto ">-->
 
-                    <img src="Forgot-password.svg" alt="reload" class="image_card mt-2 ">
-                    <div class="texts d-flex flex-column justify-content-center" >
-                        <h4 class="pt-3">Forgot Password</h4>
-                        <p>Please enter the email address for your account.
-                            <br>A verification code will be sent to you. <br>
-                            Once you have received the verification code,<br>
-                            you will be able to choose a new password for your account.</p>
-                        <form>
-                            <div class="texts d-flex flex-column justify-content-center"  >
-                                <div class="form-floating mb-3 ">
-                                    <input type="email" class="form-control input_class" id="Input" placeholder="name@vvit.net">
-                                    <label for="Input">Email address</label>
-                                </div>
-                                <div class="form-floating mb-3 ">
-                                    <input type="email" class="form-control input_class" id="Input5" placeholder="OTP">
-                                    <label for="Input5">OTP</label>
-                                </div>
+<!--                    <img src="{% static 'images/Forgot-password.svg' %}" alt="reload" class="image_card mt-2 ">-->
+<!--                    <div class="texts d-flex flex-column justify-content-center" >-->
+<!--                        <h4 class="pt-3">Forgot Password</h4>-->
+<!--                        <p>Please enter the email address for your account.-->
+<!--                            <br>A verification code will be sent to you. <br>-->
+<!--                            Once you have received the verification code,<br>-->
+<!--                            you will be able to choose a new password for your account.</p>-->
+<!--                        <form>-->
+<!--                            <div class="texts d-flex flex-column justify-content-center"  >-->
+<!--                                <div class="form-floating mb-3 ">-->
+<!--                                    <input type="email" class="form-control input_class" id="Input" placeholder="name@vvit.net">-->
+<!--                                    <label for="Input">Email address</label>-->
+<!--                                </div>-->
+<!--                                <div class="form-floating mb-3 ">-->
+<!--                                    <input type="email" class="form-control input_class" id="Input5" placeholder="OTP">-->
+<!--                                    <label for="Input5">OTP</label>-->
+<!--                                </div>-->
 
-                            </div>
+<!--                            </div>-->
 
-                        </form>
+<!--                        </form>-->
 
-                        <button  type="submit" class="btn btn-primary mt-2"> Login</button>
+<!--                        <button  type="submit" class="btn btn-primary mt-2"> Login</button>-->
 
 
 
-                    </div>
-                </div>
+<!--                    </div>-->
+<!--                </div>-->
 
-            </div>
-        </div>
+<!--            </div>-->
+<!--        </div>-->
     </div>
 
 </div>
