--- a/forgotpassword/templates/forgotpassword.html
+++ b/forgotpassword/templates/forgotpassword.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/forgotpassword.css' %}">
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            if (performance.navigation.type === 1) {
+                // Page is reloaded
+                console.log('Page is refreshed');
+            }
+        });
+    </script>
 </head>
 <body>
 
@@ -37,16 +45,16 @@
     </div>
 </nav>
 
-<div class="container ">
-    <div class="row ">
-        <div class="d-flex flex-row justify-content-center ">
+<div class="container">
+    <div class="row">
+        <div class="d-flex flex-row justify-content-center">
             <div class="d-none d-sm-none d-md-none d-lg-block d-xl-block order-2">
-                <img src="{% static 'images/Forgot-password.svg' %}" alt="reload" class=" pt-3 user_img">
+                <img src="{% static 'images/Forgot-password.svg' %}" alt="reload" class="pt-3 user_img">
             </div>
             <div class="d-none d-sm-none d-md-none d-xl-block d-lg-block col-md-6 col-xl-6 col-xl-6 pt-3 order-1">
                 <div class="card ml-5 shadow-lg w-75 h-auto m-3">
                     <h4 class="pt-3">Forgot Password</h4>
-                    <p>Please enter registered email id for your account.
+                    <p>Please enter your registered email ID for your account.
                         <br>A verification code will be sent to you. <br>
                         Once you have received the verification code,<br>
                         you will be able to choose a new password for your account.</p>
@@ -60,7 +68,7 @@
                         {% csrf_token %}
 
                         {% if step == 1 %}
-                            <!-- Step 1: Email and Send OTP -->
+                            <!-- Step 1: Email -->
                             <div class="form-floating mb-2">
                                 <input name="email" type="email" class="form-control input_class" id="Input1" placeholder="name@vvit.net">
                                 <label for="Input1">Email address</label>
@@ -69,6 +77,7 @@
                             <button type="submit" class="btn mt-3" data-mdb-ripple-init>Send OTP</button>
                         {% elif step == 2 %}
                             <!-- Step 2: OTP Verification -->
+
                             <div class="form-floating mb-2">
                                 <input name="otp" type="text" class="form-control input_class" id="Input2" placeholder="OTP">
                                 <label for="Input2">OTP</label>
