--- a/signup/templates/SignUp.html
+++ b/signup/templates/SignUp.html
@@ -63,6 +63,24 @@
                         <input name="username" type="text" class="form-control input_class" id="floatingInput3" placeholder="username">
                         <label for="floatingInput3">User Name</label>
                     </div>
+
+                    <!--gender-->
+                    <div class="form-group mb-3 m-2">
+                        <label class="form-label">Gender</label>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="maleRadio" name="gender" value="male" checked>
+                            <label class="form-check-label" for="maleRadio">Male</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="femaleRadio" name="gender" value="female">
+                            <label class="form-check-label" for="femaleRadio">Female</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="otherRadio" name="gender" value="other">
+                            <label class="form-check-label" for="otherRadio">Other</label>
+                        </div>
+                    </div>
+
                     <!--email-->
                     <div class="form-floating mb-3 m-2 w-40">
                         <input name="email" type="email" class="form-control input_class" id="floatingInput4" placeholder="Email">
